# AppPorter

./: .depcheckrc  .gitattributes  .gitignore  .prettierignore  .prettierrc  README.md  components.d.ts  components.json  eslint.config.js  eslint.config.mjs  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: TruffleHog_OSS.yml  clippy.yml  depcheck.yml  rust-checks.yml  truffle-hog.yml  udeps.yml
src/: App.vue  Installation.vue  Main.vue  Settings.vue  Start.vue  app.html  exec.ts  i18n.ts  main.ts  router.ts  settings.ts
src-tauri/: .gitignore  Cargo.toml  Settings.toml  settings.json  tauri.conf.json
src-tauri/bindings/: App.ts  AppConfig.ts  AppDetails.ts  AppInfo.ts  AppInstall.ts  AppInstallConfig.ts  AppValidationStatus.ts  Env.ts  ExeDetails.ts  ExePath.ts  FileTreeNode.ts  InstallSettings.ts  LanguageType.ts  Library.ts  Settings.ts  ThemeType.ts  Tool.ts  ToolDetails.ts  ToolInstall.ts  ToolInstallConfig.ts  ToolValidationStatus.ts  Url.ts
src-tauri/capabilities/: default.json
src-tauri/src/: Settings.toml  command.rs  commands.rs  installation.rs  lib.rs  main.rs  menu.rs  process.rs  settings.rs  websocket.rs
src-tauri/src/configs/: app_list.rs  mod.rs  settings.rs
src-tauri/src/configs/app_list/: implement.rs  impls.rs  mod.rs  structs.rs
src-tauri/src/configs/env/: impls.rs  mod.rs  structs.rs
src-tauri/src/configs/settings/: implement.rs  impls.rs  mod.rs  structs.rs  structure.rs
src-tauri/src/core/: cli.rs  context_menu.rs  download.rs  elevate.rs  exit.rs  mod.rs  startup.rs  theme.rs  websocket.rs
src-tauri/src/installation/: process.rs  setup.rs
src-tauri/src/operations/: archive.rs  cli.rs  context_menu.rs  copy_only.rs  download.rs  file_system.rs  get_details.rs  icon.rs  install.rs  install_with_link.rs  installation.rs  installation_process.rs  launcher.rs  mod.rs  preview.rs  registry.rs  startup.rs  uninstall.rs  uninstallation.rs  update.rs  utils.rs  validation.rs  zip_preview.rs
src-tauri/src/operations/core/: elevate.rs  exit.rs
src-tauri/src/operations/install/: install_app.rs  install_lib.rs  install_tool.rs  installer_mode.rs  mod.rs
src-tauri/src/operations/modify/: mod.rs  modify_app.rs  modify_tool.rs
src-tauri/src/operations/reinstall/: mod.rs  reinstall_app.rs  reinstall_tool.rs
src-tauri/src/operations/repair/: mod.rs  repair_app.rs  repair_tool.rs
src-tauri/src/operations/uninstall/: mod.rs  uninstall_app.rs  uninstall_lib.rs  uninstall_tool.rs
src-tauri/src/process/: installation.rs
src-tauri/src/utils/: crypto.rs  download.rs  icon.rs  mod.rs  path.rs  registry.rs  shortcuts.rs  timestamp.rs
src-tauri/windows/: hooks.nsi
src/Installation/: Config.vue  Option.vue  Progress.vue  ZipPreview.vue
src/Installation/components/: AppDetails.vue  Options.vue  TreeView.vue  ZipPreview.vue
src/assets/: index.css  material_icons.css  material_icons.ts
src/assets/styles/: main.css
src/assets/styles/icons/: material_icons.css  material_icons.ts
src/components/: AdminWarning.vue  ContextMenuManager.vue  DirectorySelector.vue  ErrorHandler.vue  ExecutableSelector.vue  NavigationBar.vue  WindowControls.vue  ZipPreview.vue
src/components/Core/: AdminWarning.vue  ContextMenu.vue  ContextMenuManager.vue  Disclaimer.vue  ErrorHandler.vue  Listener.vue  NavigationBar.vue  Uninstall.vue  WindowControls.vue
src/components/Drawer/: AppModify.vue  DirectorySelector.vue  DirectorySelectorDrawer.vue  PreviewDrawer.vue  Reinstall.vue  ReinstallDrawer.vue  ToolModify.vue  Uninstall.vue
src/components/ZipPreview/: DirectorySelector.vue  ExecutableSelector.vue  ZipPreview.vue
src/lib/stores/: app_list.ts  env.ts  install_config.ts  settings.ts
src/locales/: de.json  en.json  es.json  fr.json  i18n.ts  ja.json  ko.json  ru.json  zh-hans.json  zh.json
src/pages/: About.vue  AppList.vue  CopyOnly.vue  Home.vue  Settings.vue
src/pages/AppList/: index.vue
src/pages/CopyOnly/: Config.vue  Progress.vue
src/pages/Install/: Config.vue  Preview.vue
src/pages/Installation/: Config.vue  Index.vue  Progress.vue
src/plugin/: i18n.ts  router.ts
src/plugins/: i18n.ts  router.ts
src/stores/: app_list.ts  env.ts  general.ts  install_config.ts  installation_config.ts  library.ts  settings.ts
src/styles/: main.css  material_icons.css  material_icons.ts
(+48 files in other folders)
