[package]
    authors = [
        "u3l6",
    ]
    description = "AppPorter"
    edition = "2021"
    license = "MPL-2.0"
    name = "app-porter"
    version = "0.2.0"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
    # The `_lib` suffix may seem redundant but it is necessary
    # to make the lib name unique and wouldn't conflict with the bin name.
    # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
    crate-type = [
        "cdylib",
        "rlib",
        "staticlib",
    ]
    name = "app_porter_lib"

[build-dependencies]
    tauri-build = { version = "2.2.0", features = [
    ] }

[dependencies]
    async-trait = "0.1.88"
    serde = { version = "1.0.219", features = [
        "derive",
    ] }
    serde_json = "1.0.140"
    tauri = { version = "2.5.1", features = [
        "tray-icon",
    ] }
    tauri-plugin-opener = "2.2.6"

    base64 = "0.22.1"
    check_elevation = "0.2.4"
    chrono = "0.4.40"
    dirs = "6.0.0"
    erased-serde = "0.4.6"
    futures-util = "0.3.31"
    lazy_static = "1.5.0"
    log = "0.4.27"
    mslnk = "0.1.8"
    reqwest = { version = "0.12.15", features = [
        "stream",
    ] }
    systemicons = "0.9.13"
    tauri-plugin-dialog = "2.2.1"
    tauri-plugin-fs = "2.2.1"
    tauri-plugin-process = "2.2.1"
    tempfile = "3.19.1"
    tokio = { version = "1.44.2", features = [
        "full",
    ] }
    tokio-tungstenite = "0.26.2"
    toml = "0.8.21"
    windows-registry = "0.5.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
    tauri-plugin-single-instance = "2.2.3"
