[package]
    authors = [
        "you",
    ]
    description = "A Tauri App"
    edition = "2021"
    name = "app-porter"
    version = "0.1.0"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
    # The `_lib` suffix may seem redundant but it is necessary
    # to make the lib name unique and wouldn't conflict with the bin name.
    # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
    crate-type = [
        "cdylib",
        "rlib",
        "staticlib",
    ]
    name = "app_porter_lib"

[build-dependencies]
    tauri-build = { version = "2.2.0", features = [
    ] }

[dependencies]
    serde = { version = "1.0.219", features = [
        "derive",
    ] }
    serde_json = "1.0.140"
    tauri = { version = "2.5.1", features = [
    ] }
    tauri-plugin-opener = "2.2.7"
