[package]
    authors = [
        "u316",
    ]
    description = "AppPorter"
    edition = "2024"
    license = "MPL-2.0"
    name = "app-porter"
    version = "0.2.0"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
    # The `_lib` suffix may seem redundant but it is necessary
    # to make the lib name unique and wouldn't conflict with the bin name.
    # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
    crate-type = [
        "cdylib",
        "rlib",
        "staticlib",
    ]
    name = "app_porter_lib"

[build-dependencies]
    tauri-build = { version = "2.2.0", features = [
    ] }

[dependencies]
    aes-gcm = "0.10.3"
    async-trait = "0.1.88"
    rand = "0.9.1"
    serde = { version = "1.0.219", features = [
        "derive",
    ] }
    serde_json = "1.0.140"
    tauri = { version = "2.5.1", features = [
        "tray-icon",
    ] }

    base64 = "0.22.1"
    check_elevation = "0.2.7"
    chrono = "0.4.41"
    dirs = "6.0.0"
    erased-serde = "0.4.6"
    futures-util = "0.3.31"
    ico = "0.4.0"
    image = "0.25.6"
    lazy_static = "1.5.0"
    mslnk = "0.1.8"
    reqwest = { version = "0.12.20", features = [
        "stream",
    ] }
    systemicons = "0.9.13"
    tauri-plugin-clipboard-manager = "2.2.3"
    tauri-plugin-dialog = "2.2.2"
    tempfile = "3.20.0"
    tokio = { version = "1.45.1", features = [
        "full",
    ] }
    tokio-tungstenite = "0.27.0"
    toml = "0.8.23"
    windows-registry = "0.5.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
    tauri-plugin-single-instance = "2.2.4"
